Continued with adapting the manual dialog for mvvmFX
Signed-off-by: Nils Christian Ehmke <nils@rhocas.de>